2008-03-25  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for trunc.

2008-03-21  David Bateman  <dbateman@free.fr>

	* configure.in (HAVE_AMD): Complete test for presence of amd.

2008-03-18  David Bateman  <dbateman@free.fr>

	* configure.in (AC_CHECK_FUNCS): Also check lgamma_r.

2008-03-11  David Bateman  <dbateman@free.fr>

	* run-octave.in: Fix typo.

2008-02-21  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (install install-strip): Ignore errors
	installing octave.desktop file.

2008-02-15  John W. Eaton  <jwe@octave.org>

	* configure.in (*-*-freebsd*, *-*-openbsd*): Don't set SH_LD.

2008-02-14  John W. Eaton  <jwe@octave.org>

	* examples/fortdemo.cc: Don't check f77_exception_encountered.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (octave.desktop):
	Use mv instead of move-if-change.

2008-02-05  John W. Eaton  <jwe@octave.org>

	* dlfcn/Makefile.in: Unconditionally include $(MAKEDEPS).
	Mark $(MAKEDEPS) as .PHONY targets if omit_deps is true.

2008-01-12  John W. Eaton  <jwe@octave.org>

	* aclocal.m4: Call AC_SUBST instead of AC_DEFINE_UNQOTED for
	GNUPLOT_BINARY.
	* aclocal.m4, configure.in: Use GNUPLOT instead of GNUPLOT_BINARY
	as variable name.
	* Makeconf.in (GNUPLOT): Substitute.
	(do-subst-config-vals): Substitute GNUPLOT.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-13  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (octave-bug, octave-config, mkoctfile):
	Also depend on $(top_srcdir)/src/version.h.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* acx_blas.m4: Use -lsunperf, not -xlic_lib=sunperf.
	From Jim Langston <Jim.Langston@Sun.COM>.

2007-12-06  John W. Eaton  <jwe@octave.org>

	* configure.in (*-*-darwin*): Only set CPICFLAG, CXXPICFLAG, and
	FPICFLAG to "" on powerpc systems.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* octave-bug.in (LIBDLFCN): Delete variable and all uses.
	* Makeconf.in (LIBDLFCN, DLFCN_INCFLAGS): Likewise.