@@ -1313,15 +1313,16 @@ fi
 
 ### Checks for functions and variables.
 
-AC_CHECK_FUNCS(atexit basename bcopy bzero canonicalize_file_name chmod \
-  dup2 endgrent endpwent execvp fcntl fork getcwd getegid geteuid \
-  getgid getgrent getgrgid getgrnam getpgrp getpid getppid getpwent \
-  getpwuid gettimeofday getuid getwd _kbhit kill lgamma lgamma_r link \
-  localtime_r lstat memmove mkdir mkfifo mkstemp on_exit pipe poll putenv \
-  raise readlink realpath rename resolvepath rindex rmdir round select \
-  setgrent setlocale setpwent setvbuf sigaction siglongjmp sigpending \
-  sigprocmask sigsuspend snprintf stat strcasecmp strdup strerror stricmp \
-  strncasecmp strnicmp strptime strsignal symlink tempnam tgamma trunc umask \
+AC_CHECK_FUNCS(atexit basename bcopy bzero canonicalize_file_name \
+  chmod dup2 endgrent endpwent execvp expm1 fcntl fork getcwd \
+  getegid geteuid getgid getgrent getgrgid getgrnam getpgrp getpid \
+  getppid getpwent getpwuid gettimeofday getuid getwd _kbhit kill \
+  lgamma lgamma_r link localtime_r log1p lstat memmove mkdir mkfifo \
+  mkstemp on_exit pipe poll putenv raise readlink realpath rename \
+  resolvepath rindex rmdir round select setgrent setlocale setpwent \
+  setvbuf sigaction siglongjmp sigpending sigprocmask sigsuspend \
+  snprintf stat strcasecmp strdup strerror stricmp strncasecmp \
+  strnicmp strptime strsignal symlink tempnam tgamma trunc umask \
   uname unlink usleep utime vfprintf vsprintf vsnprintf waitpid \
   _chmod _snprintf x_utime _utime32)
 
