@@ -927,6 +927,7 @@ UNDEFINED_MAPPER (cosh)
 UNDEFINED_MAPPER (erf)
 UNDEFINED_MAPPER (erfc)
 UNDEFINED_MAPPER (exp)
+UNDEFINED_MAPPER (expm1)
 UNDEFINED_MAPPER (finite)
 UNDEFINED_MAPPER (fix)
 UNDEFINED_MAPPER (floor)
@@ -938,6 +939,7 @@ UNDEFINED_MAPPER (isnan)
 UNDEFINED_MAPPER (lgamma)
 UNDEFINED_MAPPER (log)
 UNDEFINED_MAPPER (log10)
+UNDEFINED_MAPPER (log1p)
 UNDEFINED_MAPPER (real)
 UNDEFINED_MAPPER (round)
 UNDEFINED_MAPPER (roundb)
