@@ -208,6 +208,7 @@ public:
   BOOL_MAT_MAPPER (erf)
   BOOL_MAT_MAPPER (erfc)
   BOOL_MAT_MAPPER (exp)
+  BOOL_MAT_MAPPER (expm1)
   BOOL_MAT_MAPPER (finite)
   BOOL_MAT_MAPPER (fix)
   BOOL_MAT_MAPPER (floor)
@@ -219,6 +220,7 @@ public:
   BOOL_MAT_MAPPER (lgamma)
   BOOL_MAT_MAPPER (log)
   BOOL_MAT_MAPPER (log10)
+  BOOL_MAT_MAPPER (log1p)
   BOOL_MAT_MAPPER (real)
   BOOL_MAT_MAPPER (round)
   BOOL_MAT_MAPPER (roundb)
