@@ -164,6 +164,7 @@ public:
   BOOL_SPARSE_MAPPER (erf)
   BOOL_SPARSE_MAPPER (erfc)
   BOOL_SPARSE_MAPPER (exp)
+  BOOL_SPARSE_MAPPER (expm1)
   BOOL_SPARSE_MAPPER (finite)
   BOOL_SPARSE_MAPPER (fix)
   BOOL_SPARSE_MAPPER (floor)
@@ -175,6 +176,7 @@ public:
   BOOL_SPARSE_MAPPER (lgamma)
   BOOL_SPARSE_MAPPER (log)
   BOOL_SPARSE_MAPPER (log10)
+  BOOL_SPARSE_MAPPER (log1p)
   BOOL_SPARSE_MAPPER (real)
   BOOL_SPARSE_MAPPER (round)
   BOOL_SPARSE_MAPPER (roundb)
