@@ -216,6 +216,7 @@ public:
   BOOL_MAPPER (erf)
   BOOL_MAPPER (erfc)
   BOOL_MAPPER (exp)
+  BOOL_MAPPER (expm1)
   BOOL_MAPPER (finite)
   BOOL_MAPPER (fix)
   BOOL_MAPPER (floor)
@@ -227,6 +228,7 @@ public:
   BOOL_MAPPER (lgamma)
   BOOL_MAPPER (log)
   BOOL_MAPPER (log10)
+  BOOL_MAPPER (log1p)
   BOOL_MAPPER (real)
   BOOL_MAPPER (round)
   BOOL_MAPPER (roundb)
