@@ -861,11 +861,13 @@ SPARSE_MAPPER (conj, SparseComplexMatrix::cmapper, std::conj)
 SPARSE_MAPPER (cos, SparseComplexMatrix::cmapper, std::cos)
 SPARSE_MAPPER (cosh, SparseComplexMatrix::cmapper, std::cosh)
 SPARSE_MAPPER (exp, SparseComplexMatrix::cmapper, std::exp)
+SPARSE_MAPPER (expm1, SparseComplexMatrix::cmapper, ::expm1)
 SPARSE_MAPPER (fix, SparseComplexMatrix::cmapper, ::fix)
 SPARSE_MAPPER (floor, SparseComplexMatrix::cmapper, ::floor)
 SPARSE_MAPPER (imag, SparseComplexMatrix::dmapper, ximag)
 SPARSE_MAPPER (log, SparseComplexMatrix::cmapper, std::log)
 SPARSE_MAPPER (log10, SparseComplexMatrix::cmapper, std::log10)
+SPARSE_MAPPER (log1p, SparseComplexMatrix::cmapper, ::log1p)
 SPARSE_MAPPER (real, SparseComplexMatrix::dmapper, xreal)
 SPARSE_MAPPER (round, SparseComplexMatrix::cmapper, xround)
 SPARSE_MAPPER (roundb, SparseComplexMatrix::cmapper, xroundb)
