@@ -291,6 +291,7 @@ public:
   RANGE_MAPPER (erf)
   RANGE_MAPPER (erfc)
   RANGE_MAPPER (exp)
+  RANGE_MAPPER (expm1)
   RANGE_MAPPER (finite)
   RANGE_MAPPER (fix)
   RANGE_MAPPER (floor)
@@ -302,6 +303,7 @@ public:
   RANGE_MAPPER (lgamma)
   RANGE_MAPPER (log)
   RANGE_MAPPER (log10)
+  RANGE_MAPPER (log1p)
   RANGE_MAPPER (real)
   RANGE_MAPPER (round)
   RANGE_MAPPER (roundb)
