@@ -920,11 +920,13 @@ SPARSE_MAPPER (conj, SparseMatrix::dmapper, xconj)
 SPARSE_MAPPER (cos, SparseMatrix::dmapper, ::cos)
 SPARSE_MAPPER (cosh, SparseMatrix::dmapper, ::cosh)
 SPARSE_MAPPER (exp, SparseMatrix::dmapper, ::exp)
+SPARSE_MAPPER (expm1, SparseMatrix::dmapper, ::expm1)
 SPARSE_MAPPER (fix, SparseMatrix::dmapper, ::fix)
 SPARSE_MAPPER (floor, SparseMatrix::dmapper, ::floor)
 SPARSE_MAPPER (imag, SparseMatrix::dmapper, ::imag)
 CD_SPARSE_MAPPER (log, ::log, std::log, 0.0, octave_Inf)
 CD_SPARSE_MAPPER (log10, ::log10, std::log10, 0.0, octave_Inf)
+CD_SPARSE_MAPPER (log1p, ::log1p, ::log1p, 0.0, octave_Inf)
 SPARSE_MAPPER (real, SparseMatrix::dmapper, ::real)
 SPARSE_MAPPER (round, SparseMatrix::dmapper, xround)
 SPARSE_MAPPER (roundb, SparseMatrix::dmapper, xroundb)
