@@ -902,6 +902,7 @@ public:
   MAPPER_FORWARD (erf)
   MAPPER_FORWARD (erfc)
   MAPPER_FORWARD (exp)
+  MAPPER_FORWARD (expm1)
   MAPPER_FORWARD (finite)
   MAPPER_FORWARD (fix)
   MAPPER_FORWARD (floor)
@@ -913,6 +914,7 @@ public:
   MAPPER_FORWARD (lgamma)
   MAPPER_FORWARD (log)
   MAPPER_FORWARD (log10)
+  MAPPER_FORWARD (log1p)
   MAPPER_FORWARD (real)
   MAPPER_FORWARD (round)
   MAPPER_FORWARD (roundb)
